# 5G-Gibbon

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  generate_demo.py  install.py  pyproject.toml  requirements.txt  run.py  setup.sh
analysis/: packet_capture.py  pcap_analyzer.py  rate_limit_testing.py  session_tracker.py  traffic_analyzer.py
attacks/: advanced_fuzzing.py  advanced_gnb_registration.py  async_attacks.py  billing_fraud.py  lte_attacks.py  nested_tunnel_testing.py  ngap_injection.py  pfcp_attacks.py  protocol_fuzzer.py  rogue_gnodeb.py  side_channel.py  timing_attacks.py  ue_to_ue_injection.py
audit/: security_audit.py
core/: adaptive_rate.py  async_utils.py  cli.py  config.py  logger_config.py  progress_tracker.py  resource_manager.py  response_verifier.py  results_db.py  streaming.py
defense/: anomaly_detector.py  dpi_recommendations.txt  dpi_remediation.py  honeypot.py  ids_signatures.py  security_audit.py  ultra_blue_team.py
discovery/: async_scanner.py  network_discovery.py  network_scanner.py  quick_discovery.py  show_interfaces.py  show_interfaces_detailed.py
docs/: ARCHITECTURE.md  DOCKER.md  HONEYPOT.md  INSTALLATION.md  REPORTING.md  USER_GUIDE.md
enumeration/: async_enumeration.py  enhanced_enumeration.py  teid_seid_enumeration.py
examples/: README.md  demo_report.html  demo_report.json  demo_topology.html
key_extraction/: key_extraction_stress.py  maximum_extraction.py  ngap_key_extraction.py  nuclear_key_extraction.py
protocol/: diameter.py  http2_sbi.py  protocol_layers.py  s1ap.py  sctp_enhanced.py  sctp_proper.py
red_team/: ultra_red_team.py
reporting/: __init__.py  dashboard.py  html_report.py  visualization.py
tests/: test_toolkit.py
tunneling/: gtpu_tunneling.py
utils/: add_subscriber.py  performance_monitor.py
